--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 body {
+  background-color: #1e1e1e;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   margin: 0;
